vara group case study

--- a/src/pages/work/luca-faloni.astro
+++ b/src/pages/work/luca-faloni.astro
@@ -71,7 +71,7 @@ import Layout from '../../layouts/Layout.astro';
         </div>
         <div>
           <span class="block text-gray-400 mb-1">Timeline</span>
-          <span class="text-black font-bold">26 Weeks</span>
+          <span class="text-black font-bold">2023-24</span>
         </div>
       </div>
     </div>
