--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,7 @@ const { title } = Astro.props;
 <!doctype html>
 <html lang="en" class="scroll-smooth">
 	<head>
+	
 		<meta charset="UTF-8" />
 		<meta name="description" content="Yatish Shirsath - Strategic Design Manager" />
 		<meta name="viewport" content="width=device-width" />
@@ -18,6 +19,15 @@ const { title } = Astro.props;
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;800&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 		<title>{title}</title>
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CS0643C17V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CS0643C17V');
+</script>
 	</head>
 	<body class="bg-slate-50 text-slate-900 font-['Inter'] antialiased selection:bg-indigo-100 selection:text-indigo-700">
 		
